# otus-cpp.homework07.bulk

./: CMakeLists.txt  bulk.cpp  bulk.h  bulk_observer.cpp  bulk_observer.h  bulk_storage.cpp  bulk_storage.h  main.cpp  utils.h
tests/: bulk_test.cpp
